# ai-pengui-workshop

./: .env.example  AGENTS.md  ENV_SETUP.md  PENGUIFLOW.md  README.md  agent.yaml  app.py  app.yaml  pyproject.toml
.agiv/: project.toml
.agiv/bundle/: dev.toml
.agiv/deployment/: dev.toml
src/agentiv/: state_store.py  util.py  websocket_entry.py
src/echo_agent/: __init__.py  __main__.py  a2a.py  config.py  models.py  orchestrator.py  planner.py  telemetry.py
src/echo_agent/clients/: __init__.py  memory.py
src/echo_agent/data/: audience_segments.csv  mock_campaigns.json
src/echo_agent/tools/: __init__.py  analyze.py  campaign_line.py  echo.py  search.py  search_segment.py
tests/: __init__.py  conftest.py  test_orchestrator.py
tests/test_tools/: __init__.py  test_analyze.py  test_echo.py  test_search.py
workshop-demo-tool/: README.md  scripts_generate_mock.py
workshop-demo-tool/tools/: mock_campaign_insights.py
