[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-agent"
version = "0.1.0"
description = "PenguiFlow react template for echo-agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "penguiflow[planner]",

    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",

]

[project.scripts]
echo_agent = "echo_agent.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"