[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-agent"
version = "0.1.0"
description = "PenguiFlow react template for echo-agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "penguiflow[planner]",
    "pydantic>=2.6",
    "uvicorn[standard]>=0.40.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",

]

[project.scripts]
echo_agent = "echo_agent.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
agiv-cli = { git = "ssh://git@github.com/AlphonsoCode/ai-common-components", subdirectory = "assistant", branch = "main" }

[dependency-groups]
dev = [
    "agiv-cli",
]
